# ADAS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: dashcam_fast.yaml  default.yaml  demo_export.yaml  live_showcase_iris_xe.yaml  openvino_export_demo.yaml  realtime_60.yaml  realtime_cpu.yaml  realtime_iris_xe.yaml
docs/: learning_path.md  patch2_dashcam_notes.md  patch3_premium_hud.md  patch4_realtime_curved_lane.md  patch5_cuda_cpu_realtime.md  patch6_intel_openvino.md  patch7_showcase_fix.md
models/: README.md
scripts/: check_accelerators.py  export_openvino.py  run_video.py
src/adas/: config.py  main.py
src/adas/control/: adas_controller.py
src/adas/perception/: async_detector.py  geometry.py  lane_detector.py  object_detector.py  types.py
src/adas/risk/: collision_predictor.py
src/adas/utils/: video.py
src/adas/visualization/: overlay.py
tests/: test_collision_predictor.py
