[project]
name = "adas-yolov8-prototype"
version = "0.1.0"
description = "Educational ADAS prototype with YOLOv8, collision prediction, lane detection and simulated braking."
requires-python = ">=3.10"
dependencies = [
  "ultralytics>=8.3.0",
  "opencv-python>=4.9.0",
  "numpy>=1.24.0",
  "PyYAML>=6.0.1",
  "lap>=0.5.12",
  "openvino>=2025.4.1",
]

[tool.setuptools.packages.find]
where = ["src"]
